Fixed Alignment again

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
  .list-of-nav{
-    text-align: center;
+    text-align: left;
     padding-top:.1rem;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .nav-list{
-    display:inline;
+    display:block;
     padding: 0.5rem;
 }
 
